--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script defer src="./../node_modules"></script>
+    <!-- <script defer src="/your-path-to-fontawesome/js/brands.js"></script> -->
+  <script defer src="/your-path-to-fontawesome/js/solid.js"></script>
+  <script defer src="/your-path-to-fontawesome/js/fontawesome.js"></script>
    
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>dffsd
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
